WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
66958
[Qt][WK2]REGRESSION(
r93784
): It made many tests crash
https://bugs.webkit.org/show_bug.cgi?id=66958
Summary
[Qt][WK2]REGRESSION(r93784): It made many tests crash
Csaba Osztrogonác
Reported
2011-08-25 10:41:35 PDT
details:
http://build.webkit.sed.hu/builders/x86-32%20Linux%20Qt%20Release%20WebKit2/builds/10900
Attachments
Patch
(1.56 KB, patch)
2011-08-26 10:52 PDT
,
Alexis Menard (darktears)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Balazs Kelemen
Comment 1
2011-08-26 02:06:48 PDT
I can reproduce the crashes in the bot's environment. In the stderr output there is something that can be interesting: QSGCanvas: Couldn't acquire a GL context.
Balazs Kelemen
Comment 2
2011-08-26 03:07:04 PDT
Strangely enough the tests does not crash on their own. I tried running just the crashy ones from the fast directory but those were not crashing. When I ran all tests from fast/dom then the same tests were crashing that are crashing with the bot.
Balazs Kelemen
Comment 3
2011-08-26 03:20:20 PDT
Here is the first crash log when manually running everything from fast/dom. Unfortunately this is a release build and I cannot make a debug build in this environment because the linker runs out of memory. :( Program received signal SIGSEGV, Segmentation fault. 0xf6c3b107 in WebKit::WebProcessProxy::webPage(unsigned long long) const () from /home/balazs/master_clean/b32wk2Build/Release/bin/../lib/libQtWebKit.so.4 (gdb) bt 15 #0 0xf6c3b107 in WebKit::WebProcessProxy::webPage(unsigned long long) const () from /home/balazs/master_clean/b32wk2Build/Release/bin/../lib/libQtWebKit.so.4 #1 0xf6bfcaa2 in WebKit::WebContext::didNavigateWithNavigationData(unsigned long long, WebKit::WebNavigationDataStore const&, unsigned long long) () from /home/balazs/master_clean/b32wk2Build/Release/bin/../lib/libQtWebKit.so.4 #2 0xf6c74fb9 in void CoreIPC::handleMessage<Messages::WebContext::DidNavigateWithNavigationData, WebKit::WebContext, void (WebKit::WebContext::*)(unsigned long long, WebKit::WebNavigationDataStore const&, unsigned long long)>(CoreIPC::ArgumentDecoder*, WebKit::WebContext*, void (WebKit::WebContext::*)(unsigned long long, WebKit::WebNavigationDataStore const&, unsigned long long)) () from /home/balazs/master_clean/b32wk2Build/Release/bin/../lib/libQtWebKit.so.4 #3 0xf6c75641 in WebKit::WebContext::didReceiveWebContextMessage(CoreIPC::Connection*, CoreIPC::MessageID, CoreIPC::ArgumentDecoder*) () from /home/balazs/master_clean/b32wk2Build/Release/bin/../lib/libQtWebKit.so.4 #4 0xf6c04977 in WebKit::WebContext::didReceiveMessage(CoreIPC::Connection*, CoreIPC::MessageID, CoreIPC::ArgumentDecoder*) () from /home/balazs/master_clean/b32wk2Build/Release/bin/../lib/libQtWebKit.so.4 #5 0xf6c3b43a in WebKit::WebProcessProxy::didReceiveMessage(CoreIPC::Connection*, CoreIPC::MessageID, CoreIPC::ArgumentDecoder*) () from /home/balazs/master_clean/b32wk2Build/Release/bin/../lib/libQtWebKit.so.4 #6 0xf6c8c99a in CoreIPC::Connection::dispatchMessage(CoreIPC::Connection::Message<CoreIPC::ArgumentDecoder>&) () from /home/balazs/master_clean/b32wk2Build/Release/bin/../lib/libQtWebKit.so.4 #7 0xf6c8cac3 in CoreIPC::Connection::dispatchMessages() () from /home/balazs/master_clean/b32wk2Build/Release/bin/../lib/libQtWebKit.so.4
Alexis Menard (darktears)
Comment 4
2011-08-26 10:52:28 PDT
Created
attachment 105377
[details]
Patch
WebKit Review Bot
Comment 5
2011-08-26 11:25:03 PDT
Comment on
attachment 105377
[details]
Patch Clearing flags on attachment: 105377 Committed
r93897
: <
http://trac.webkit.org/changeset/93897
>
WebKit Review Bot
Comment 6
2011-08-26 11:25:07 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug